RESOLVED FIXED301577
[iOS] [Speculative Fix] Occasional crash in Mail compose when deleting an address from the CC field
https://bugs.webkit.org/show_bug.cgi?id=301577
Summary [iOS] [Speculative Fix] Occasional crash in Mail compose when deleting an add...
Wenson Hsieh
Reported 2025-10-28 09:14:56 PDT
Attachments
Wenson Hsieh
Comment 1 2025-10-28 09:30:23 PDT
EWS
Comment 2 2025-10-28 11:16:29 PDT
Committed 302246@main (a616135fc8d3): <https://commits.webkit.org/302246@main> Reviewed commits have been landed. Closing PR #53087 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.