[iOS] [Speculative Fix] Occasional crash in Mail compose when deleting an address from the CC field https://bugs.webkit.org/show_bug.cgi?id=301577 rdar://163410036

Reviewed by Tim Horton and Abrar Rahman Protyasha.

This is a speculative fix for a crash observed in Mail compose, when attempting to delete an address
from the CC field. From the stack trace, it seems that it's possible for UIKit to still call into
these legacy selectors on the **web view**, when a native text field is first responder.

For now, address this by downgrading the release assertion to a debug assertion, only in the case
where the app is not a web browser or running tests.

* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:

Rename `RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED` → `ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED`.

(-[WKContentView startAutoscroll:]):
(-[WKContentView scrollSelectionToVisible:]):
(-[WKContentView _selectionClipRect]):
(-[WKContentView webSelectionRects]):
(-[WKContentView clearSelection]):
(-[WKContentView _lookupForWebView:]):
(-[WKContentView _shareForWebView:]):
(-[WKContentView _translateForWebView:]):
(-[WKContentView _addShortcutForWebView:]):
(-[WKContentView _promptForReplaceForWebView:]):
(-[WKContentView _transliterateChineseForWebView:]):
(-[WKContentView _defineForWebView:]):
(-[WKContentView requestAutocorrectionRectsForString:withCompletionHandler:]):
(-[WKContentView _selectionAtDocumentStart]):
(-[WKContentView applyAutocorrection:toString:isCandidate:withCompletionHandler:]):
(-[WKContentView requestAutocorrectionContextWithCompletionHandler:]):
(-[WKContentView _allowAnimatedUpdateSelectionRectViews]):
(-[WKContentView beginSelectionChange]):
(-[WKContentView endSelectionChange]):
(-[WKContentView textInputTraits]):
(-[WKContentView selectionRange]):
(-[WKContentView replaceRangeWithTextWithoutClosingTyping:replacementText:]):
(-[WKContentView modifierFlagsDidChangeFrom:to:]):
(-[WKContentView handleKeyWebEvent:]):
(-[WKContentView handleKeyWebEvent:withCompletionHandler:]):
(-[WKContentView _deleteByWord]):
(-[WKContentView _deleteForwardByWord]):
(-[WKContentView _deleteToStartOfLine]):
(-[WKContentView _deleteToEndOfLine]):
(-[WKContentView _deleteForwardAndNotify:]):
(-[WKContentView _deleteToEndOfParagraph]):
(-[WKContentView _transpose]):
(-[WKContentView _moveUp:withHistory:]):
(-[WKContentView _moveDown:withHistory:]):
(-[WKContentView _moveLeft:withHistory:]):
(-[WKContentView _moveRight:withHistory:]):
(-[WKContentView _moveToStartOfWord:withHistory:]):
(-[WKContentView _moveToStartOfParagraph:withHistory:]):
(-[WKContentView _moveToStartOfLine:withHistory:]):
(-[WKContentView _moveToStartOfDocument:withHistory:]):
(-[WKContentView _moveToEndOfWord:withHistory:]):
(-[WKContentView _moveToEndOfParagraph:withHistory:]):
(-[WKContentView _moveToEndOfLine:withHistory:]):
(-[WKContentView _moveToEndOfDocument:withHistory:]):
(-[WKContentView setBottomBufferHeight:]):
(-[WKContentView automaticallySelectedOverlay]):
(-[WKContentView hasContent]):
(-[WKContentView selectAll]):
(-[WKContentView hasSelection]):
(-[WKContentView takeTraitsFrom:]):
(-[WKContentView requestRVItemInSelectedRangeWithCompletionHandler:]):
(-[WKContentView prepareSelectionForContextMenuWithLocationInView:completionHandler:]):
(-[WKContentView _shouldSuppressSelectionCommands]):
(-[WKContentView adjustSelectionWithDelta:completionHandler:]):
(-[WKContentView _findSelectedForWebView:]):
(-[WKContentView _selectionContainerViewAboveText]):
(-[WKContentView selectionContainerView]):

Canonical link: https://commits.webkit.org/302246@main