Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm
@@ -31,6 +31,7 @@
 #import "APIUIClient.h"
 #import "CocoaImage.h"
 #import "CompletionHandlerCallChecker.h"
+#import "DefaultWebBrowserChecks.h"
 #import "DocumentEditingContext.h"
 #import "ImageAnalysisUtilities.h"
 #import "InsertTextOptions.h"
@@ -1147,10 +1148,13 @@ static WKDragSessionContext *ensureLocalDragSessionContext(id <UIDragSession> se
 #endif
 @end
 
-#define RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED() do { \
+#define ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED() do { \
     if (self.shouldUseAsyncInteractions) [[unlikely]] { \
         RELEASE_LOG_ERROR(TextInteraction, "Received unexpected call to %s", __PRETTY_FUNCTION__); \
-        RELEASE_ASSERT_NOT_REACHED(); \
+        if (WebKit::isFullWebBrowserOrRunningTest()) \
+            RELEASE_ASSERT_NOT_REACHED(); \
+        else \
+            ASSERT_NOT_REACHED(); \
     } \
 } while (0)
 
@@ -1831,7 +1835,7 @@ ALLOW_DEPRECATED_DECLARATIONS_END
 
 - (void)startAutoscroll:(CGPoint)pointInDocument
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     _page->startAutoscrollAtPosition(pointInDocument);
 }
@@ -1844,7 +1848,7 @@ ALLOW_DEPRECATED_DECLARATIONS_END
 
 - (void)scrollSelectionToVisible:(BOOL)animated
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
     // Used to scroll selection on keyboard up; we already scroll to visible.
 }
 
@@ -2966,7 +2970,7 @@ static inline WebCore::FloatSize tapHighlightBorderRadius(WebCore::FloatSize bor
 
 - (CGRect)_selectionClipRect
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     return self.selectionClipRect;
 }
@@ -3776,7 +3780,7 @@ ALLOW_DEPRECATED_DECLARATIONS_END
 
 - (NSArray *)webSelectionRects
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     if (!_page->editorState().hasPostLayoutAndVisualData() || _page->editorState().selectionIsNone)
         return nil;
@@ -4121,7 +4125,7 @@ static void cancelPotentialTapIfNecessary(WKContentView* contentView)
 
 - (void)clearSelection
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self _internalClearSelection];
 }
@@ -4292,7 +4296,7 @@ FOR_EACH_PRIVATE_WKCONTENTVIEW_ACTION(FORWARD_ACTION_TO_WKWEBVIEW)
 
 - (void)_lookupForWebView:(id)sender
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self lookupForWebView:sender];
 }
@@ -4328,7 +4332,7 @@ FOR_EACH_PRIVATE_WKCONTENTVIEW_ACTION(FORWARD_ACTION_TO_WKWEBVIEW)
 
 - (void)_shareForWebView:(id)sender
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self shareForWebView:sender];
 }
@@ -4350,7 +4354,7 @@ FOR_EACH_PRIVATE_WKCONTENTVIEW_ACTION(FORWARD_ACTION_TO_WKWEBVIEW)
 
 - (void)_translateForWebView:(id)sender
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self translateForWebView:sender];
 }
@@ -4377,7 +4381,7 @@ FOR_EACH_PRIVATE_WKCONTENTVIEW_ACTION(FORWARD_ACTION_TO_WKWEBVIEW)
 
 - (void)_addShortcutForWebView:(id)sender
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self addShortcutForWebView:sender];
 }
@@ -4443,7 +4447,7 @@ FOR_EACH_PRIVATE_WKCONTENTVIEW_ACTION(FORWARD_ACTION_TO_WKWEBVIEW)
 
 - (void)_promptForReplaceForWebView:(id)sender
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self promptForReplaceForWebView:sender];
 }
@@ -4461,7 +4465,7 @@ FOR_EACH_PRIVATE_WKCONTENTVIEW_ACTION(FORWARD_ACTION_TO_WKWEBVIEW)
 
 - (void)_transliterateChineseForWebView:(id)sender
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self transliterateChineseForWebView:sender];
 }
@@ -5056,7 +5060,7 @@ ALLOW_DEPRECATED_DECLARATIONS_END
 
 - (void)_defineForWebView:(id)sender
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self lookupForWebView:sender];
 }
@@ -5534,7 +5538,7 @@ static void selectionChangedWithTouch(WKTextInteractionWrapper *interaction, con
 // The completion handler can pass nil if input does not match the actual text preceding the insertion point.
 - (void)requestAutocorrectionRectsForString:(NSString *)input withCompletionHandler:(void (^)(UIWKAutocorrectionRects *rectsForInput))completionHandler
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     if (!completionHandler) {
         [NSException raise:NSInvalidArgumentException format:@"Expected a nonnull completion handler in %s.", __PRETTY_FUNCTION__];
@@ -5914,7 +5918,7 @@ static void logTextInteraction(const char* methodName, UIGestureRecognizer *loup
 
 - (BOOL)_selectionAtDocumentStart
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     return self.selectionAtDocumentStart;
 }
@@ -5965,7 +5969,7 @@ static void logTextInteraction(const char* methodName, UIGestureRecognizer *loup
 // The completion handler should pass the rect of the correction text after replacing the input text, or nil if the replacement could not be performed.
 - (void)applyAutocorrection:(NSString *)correction toString:(NSString *)input isCandidate:(BOOL)isCandidate withCompletionHandler:(void (^)(UIWKAutocorrectionRects *rectsForCorrection))completionHandler
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self _internalReplaceText:input withText:correction isCandidate:isCandidate completion:[completionHandler = makeBlockPtr(completionHandler), view = retainPtr(self)](bool wasApplied) {
         completionHandler(wasApplied ? [WKAutocorrectionRects autocorrectionRectsWithFirstCGRect:view->_autocorrectionData.textFirstRect lastCGRect:view->_autocorrectionData.textLastRect] : nil);
@@ -6013,7 +6017,7 @@ static void logTextInteraction(const char* methodName, UIGestureRecognizer *loup
 
 - (void)requestAutocorrectionContextWithCompletionHandler:(void (^)(UIWKAutocorrectionContext *autocorrectionContext))completionHandler
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     if (!completionHandler) {
         [NSException raise:NSInvalidArgumentException format:@"Expected a nonnull completion handler in %s.", __PRETTY_FUNCTION__];
@@ -6341,14 +6345,14 @@ static void logTextInteraction(const char* methodName, UIGestureRecognizer *loup
 
 - (BOOL)_allowAnimatedUpdateSelectionRectViews
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     return NO;
 }
 
 - (void)beginSelectionChange
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self _internalBeginSelectionChange];
 }
@@ -6375,7 +6379,7 @@ static void logTextInteraction(const char* methodName, UIGestureRecognizer *loup
 
 - (void)endSelectionChange
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self _internalEndSelectionChange];
 }
@@ -7200,7 +7204,7 @@ static UITextAutocapitalizationType toUITextAutocapitalize(WebCore::Autocapitali
 - (UITextInputTraits *)textInputTraits
 {
     if (!self._requiresLegacyTextInputTraits)
-        RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+        ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     _legacyTextInputTraits = [_webView _textInputTraits];
     return _legacyTextInputTraits.get();
@@ -7405,7 +7409,7 @@ static UITextAutocapitalizationType toUITextAutocapitalize(WebCore::Autocapitali
 // (i.e. selectionRange) has shipped as API.
 - (NSRange)selectionRange
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     return NSMakeRange(NSNotFound, 0);
 }
@@ -7433,7 +7437,7 @@ static UITextAutocapitalizationType toUITextAutocapitalize(WebCore::Autocapitali
 // Modify text without starting a new undo grouping.
 - (void)replaceRangeWithTextWithoutClosingTyping:(UITextRange *)range replacementText:(NSString *)text
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 }
 
 // Caret rect support.  Shouldn't be necessary, but firstRectForRange doesn't offer precisely
@@ -7544,7 +7548,7 @@ static UITextAutocapitalizationType toUITextAutocapitalize(WebCore::Autocapitali
 
 - (void)modifierFlagsDidChangeFrom:(UIKeyModifierFlags)oldFlags to:(UIKeyModifierFlags)newFlags
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     auto dispatchSyntheticFlagsChangedEvents = [&] (UIKeyModifierFlags flags, bool keyDown) {
         if (flags & UIKeyModifierShift)
@@ -7630,7 +7634,7 @@ static UITextAutocapitalizationType toUITextAutocapitalize(WebCore::Autocapitali
 
 - (void)handleKeyWebEvent:(::WebEvent *)theEvent
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self _internalHandleKeyWebEvent:theEvent];
 }
@@ -7642,7 +7646,7 @@ static UITextAutocapitalizationType toUITextAutocapitalize(WebCore::Autocapitali
 
 - (void)handleKeyWebEvent:(::WebEvent *)event withCompletionHandler:(void (^)(::WebEvent *theEvent, BOOL wasHandled))completionHandler
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self _internalHandleKeyWebEvent:event withCompletionHandler:completionHandler];
 }
@@ -7911,56 +7915,56 @@ static UITextAutocapitalizationType toUITextAutocapitalize(WebCore::Autocapitali
 
 - (void)_deleteByWord
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self _executeEditCommand:@"deleteWordBackward"];
 }
 
 - (void)_deleteForwardByWord
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self _executeEditCommand:@"deleteWordForward"];
 }
 
 - (void)_deleteToStartOfLine
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self _executeEditCommand:@"deleteToBeginningOfLine"];
 }
 
 - (void)_deleteToEndOfLine
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self _executeEditCommand:@"deleteToEndOfLine"];
 }
 
 - (void)_deleteForwardAndNotify:(BOOL)notify
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self _executeEditCommand:@"deleteForward"];
 }
 
 - (void)_deleteToEndOfParagraph
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self _executeEditCommand:@"deleteToEndOfParagraph"];
 }
 
 - (void)_transpose
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self transposeCharactersAroundSelection];
 }
 
 - (UITextInputArrowKeyHistory *)_moveUp:(BOOL)extending withHistory:(UITextInputArrowKeyHistory *)history
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self _executeEditCommand:extending ? @"moveUpAndModifySelection" : @"moveUp"];
     return nil;
@@ -7968,7 +7972,7 @@ static UITextAutocapitalizationType toUITextAutocapitalize(WebCore::Autocapitali
 
 - (UITextInputArrowKeyHistory *)_moveDown:(BOOL)extending withHistory:(UITextInputArrowKeyHistory *)history
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self _executeEditCommand:extending ? @"moveDownAndModifySelection" : @"moveDown"];
     return nil;
@@ -7976,7 +7980,7 @@ static UITextAutocapitalizationType toUITextAutocapitalize(WebCore::Autocapitali
 
 - (UITextInputArrowKeyHistory *)_moveLeft:(BOOL)extending withHistory:(UITextInputArrowKeyHistory *)history
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self _executeEditCommand:extending? @"moveLeftAndModifySelection" : @"moveLeft"];
     return nil;
@@ -7984,7 +7988,7 @@ static UITextAutocapitalizationType toUITextAutocapitalize(WebCore::Autocapitali
 
 - (UITextInputArrowKeyHistory *)_moveRight:(BOOL)extending withHistory:(UITextInputArrowKeyHistory *)history
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self _executeEditCommand:extending ? @"moveRightAndModifySelection" : @"moveRight"];
     return nil;
@@ -7992,7 +7996,7 @@ static UITextAutocapitalizationType toUITextAutocapitalize(WebCore::Autocapitali
 
 - (UITextInputArrowKeyHistory *)_moveToStartOfWord:(BOOL)extending withHistory:(UITextInputArrowKeyHistory *)history
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self _executeEditCommand:extending ? @"moveWordBackwardAndModifySelection" : @"moveWordBackward"];
     return nil;
@@ -8000,7 +8004,7 @@ static UITextAutocapitalizationType toUITextAutocapitalize(WebCore::Autocapitali
 
 - (UITextInputArrowKeyHistory *)_moveToStartOfParagraph:(BOOL)extending withHistory:(UITextInputArrowKeyHistory *)history
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self _executeEditCommand:extending ? @"moveBackwardAndModifySelection" : @"moveBackward"];
     [self _executeEditCommand:extending ? @"moveToBeginningOfParagraphAndModifySelection" : @"moveToBeginningOfParagraph"];
@@ -8009,7 +8013,7 @@ static UITextAutocapitalizationType toUITextAutocapitalize(WebCore::Autocapitali
 
 - (UITextInputArrowKeyHistory *)_moveToStartOfLine:(BOOL)extending withHistory:(UITextInputArrowKeyHistory *)history
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self _executeEditCommand:extending ? @"moveToBeginningOfLineAndModifySelection" : @"moveToBeginningOfLine"];
     return nil;
@@ -8017,7 +8021,7 @@ static UITextAutocapitalizationType toUITextAutocapitalize(WebCore::Autocapitali
 
 - (UITextInputArrowKeyHistory *)_moveToStartOfDocument:(BOOL)extending withHistory:(UITextInputArrowKeyHistory *)history
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self _executeEditCommand:extending ? @"moveToBeginningOfDocumentAndModifySelection" : @"moveToBeginningOfDocument"];
     return nil;
@@ -8025,7 +8029,7 @@ static UITextAutocapitalizationType toUITextAutocapitalize(WebCore::Autocapitali
 
 - (UITextInputArrowKeyHistory *)_moveToEndOfWord:(BOOL)extending withHistory:(UITextInputArrowKeyHistory *)history
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self _executeEditCommand:extending ? @"moveWordForwardAndModifySelection" : @"moveWordForward"];
     return nil;
@@ -8033,7 +8037,7 @@ static UITextAutocapitalizationType toUITextAutocapitalize(WebCore::Autocapitali
 
 - (UITextInputArrowKeyHistory *)_moveToEndOfParagraph:(BOOL)extending withHistory:(UITextInputArrowKeyHistory *)history
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self _executeEditCommand:extending ? @"moveForwardAndModifySelection" : @"moveForward"];
     [self _executeEditCommand:extending ? @"moveToEndOfParagraphAndModifySelection" : @"moveToEndOfParagraph"];
@@ -8042,7 +8046,7 @@ static UITextAutocapitalizationType toUITextAutocapitalize(WebCore::Autocapitali
 
 - (UITextInputArrowKeyHistory *)_moveToEndOfLine:(BOOL)extending withHistory:(UITextInputArrowKeyHistory *)history
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self _executeEditCommand:extending ? @"moveToEndOfLineAndModifySelection" : @"moveToEndOfLine"];
     return nil;
@@ -8050,7 +8054,7 @@ static UITextAutocapitalizationType toUITextAutocapitalize(WebCore::Autocapitali
 
 - (UITextInputArrowKeyHistory *)_moveToEndOfDocument:(BOOL)extending withHistory:(UITextInputArrowKeyHistory *)history
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self _executeEditCommand:extending ? @"moveToEndOfDocumentAndModifySelection" : @"moveToEndOfDocument"];
     return nil;
@@ -8059,12 +8063,12 @@ static UITextAutocapitalizationType toUITextAutocapitalize(WebCore::Autocapitali
 // Sets a buffer to make room for autocorrection views
 - (void)setBottomBufferHeight:(CGFloat)bottomBuffer
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 }
 
 - (UIView *)automaticallySelectedOverlay
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     return [self unscaledView];
 }
@@ -8104,7 +8108,7 @@ static UITextAutocapitalizationType toUITextAutocapitalize(WebCore::Autocapitali
 
 - (BOOL)hasContent
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     return self._hasContent;
 }
@@ -8117,12 +8121,12 @@ static UITextAutocapitalizationType toUITextAutocapitalize(WebCore::Autocapitali
 
 - (void)selectAll
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 }
 
 - (BOOL)hasSelection
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     return NO;
 }
@@ -8160,7 +8164,7 @@ static UITextAutocapitalizationType toUITextAutocapitalize(WebCore::Autocapitali
 
 - (void)takeTraitsFrom:(UITextInputTraits *)traits
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [[self textInputTraits] takeTraitsFrom:traits];
 }
@@ -9508,7 +9512,7 @@ static bool canUseQuickboardControllerFor(UITextContentType type)
 #if ENABLE(REVEAL)
 - (void)requestRVItemInSelectedRangeWithCompletionHandler:(void(^)(RVItem *item))completionHandler
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     _page->requestRVItemInCurrentSelectedRange([completionHandler = makeBlockPtr(completionHandler), weakSelf = WeakObjCPtr<WKContentView>(self)](const WebKit::RevealItem& item) {
         auto strongSelf = weakSelf.get();
@@ -9521,7 +9525,7 @@ static bool canUseQuickboardControllerFor(UITextContentType type)
 
 - (void)prepareSelectionForContextMenuWithLocationInView:(CGPoint)locationInView completionHandler:(void(^)(BOOL shouldPresentMenu, RVItem *item))completionHandler
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self _internalSelectTextForContextMenuWithLocationInView:locationInView completionHandler:[completionHandler = makeBlockPtr(completionHandler)](BOOL shouldPresentMenu, const WebKit::RevealItem& item) {
         completionHandler(shouldPresentMenu, item.item());
@@ -9564,7 +9568,7 @@ static bool canUseQuickboardControllerFor(UITextContentType type)
 
 - (BOOL)_shouldSuppressSelectionCommands
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     return self.shouldSuppressEditMenu;
 }
@@ -11910,7 +11914,7 @@ static WebKit::DocumentEditingContextRequest toWebRequest(id request)
 
 - (void)adjustSelectionWithDelta:(NSRange)deltaRange completionHandler:(void (^)(void))completionHandler
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     // UIKit is putting casted signed integers into NSRange. Cast them back to reveal any negative values.
     [self _internalAdjustSelectionWithOffset:static_cast<NSInteger>(deltaRange.location) lengthDelta:static_cast<NSInteger>(deltaRange.length) completionHandler:completionHandler];
@@ -12667,7 +12671,7 @@ static RetainPtr<NSItemProvider> createItemProvider(const WebKit::WebPageProxy& 
 
 - (void)_findSelectedForWebView:(id)sender
 {
-    RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
+    ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED();
 
     [self findSelectedForWebView:sender];
 }
@@ -14215,14 +14219,14 @@ static inline WKTextAnimationType toWKTextAnimationType(WebCore::TextAnimationTy
 
 - (UIView *)_selectionContainerViewAboveText
 {
-    // FIXME: Consider adding RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED()
+    // FIXME: Consider adding ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED()
     // once the changes in rdar://150645383 are in all relevant builds.
     return self._selectionContainerViewInternal;
 }
 
 - (UIView *)selectionContainerView
 {
-    // FIXME: Consider adding RELEASE_ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED()
+    // FIXME: Consider adding ASSERT_ASYNC_TEXT_INTERACTIONS_DISABLED()
     // once the changes in rdar://150645383 are in all relevant builds.
     return self._selectionContainerViewInternal;
 }
